# mycoinevo-libapp-js

./: .gitmodules  .prettierignore  CMakeLists.txt  LICENSE.txt  package-lock.json  package.json
libapp_js/: MyCoinevoLibAppBridge.js  MyCoinevoLibAppBridgeClass.js  MyCoinevoLibAppCpp_ASMJS.js  MyCoinevoLibAppCpp_WASM.js  MyCoinevoLibAppCpp_WASM.wasm
src/: emscr_SendFunds_bridge.cpp  emscr_SendFunds_bridge.hpp  index.cpp
tests/: MyCoinevoLibAppCpp.node.js  sendingFunds.spec.js
